--- a/defend_data_capture/supply_chains/templates/strategic_action_summary_saved.html
+++ b/defend_data_capture/supply_chains/templates/strategic_action_summary_saved.html
@@ -41,6 +41,11 @@
             <dd class="govuk-summary-list__value">
               {{ action.description|default:"No information" }}
             </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> description</span>
+              </a>
+            </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -51,6 +56,11 @@
             <dd class="govuk-summary-list__value">
               {{ action.impact|default:"No information" }}
             </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> impact</span>
+              </a>
+            </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -58,6 +68,11 @@
             </dt>
             <dd class="govuk-summary-list__value">
               {{ action.get_category_display|default:"No information" }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> category</span>
+              </a>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
@@ -67,6 +82,11 @@
             <dd class="govuk-summary-list__value">
               {{ action.get_geographic_scope_display|default:"No information" }}
             </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> geographic scope</span>
+              </a>
+            </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -74,6 +94,11 @@
             </dt>
             <dd class="govuk-summary-list__value">
               {{ action.get_supporting_organisations_display|default:"No information" }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> supporting departments</span>
+              </a>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
@@ -87,6 +112,11 @@
               {{ action.target_completion_date|date:"SHORT_DATE_FORMAT"|default:"No information" }}
               {% endif %}
             </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> date of intended completion</span>
+              </a>
+            </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -95,6 +125,11 @@
             <dd class="govuk-summary-list__value">
               {{ action.other_dependencies|default:"No information" }}
             </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> other dependencies</span>
+              </a>
+            </dd>
           </div>
           <div class="govuk-summary-list__row govuk-summary-list--no-border">
             <dt class="govuk-summary-list__key">
@@ -102,6 +137,11 @@
             </dt>
             <dd class="govuk-summary-list__value">
               {{ action.specific_related_products|default:"No information" }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> specific products the action relates to</span>
+              </a>
             </dd>
           </div>
       </dl>
