--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-timing-form.html
@@ -4,13 +4,20 @@
     {% include 'supply_chains/includes/mu-existing-completion-date.html' %}
     <form method="post" action="">
         {% csrf_token %}
-        <div class="govuk-form-group{% if form.errors %} govuk-form-group--error{% endif %}">
+        <div class="govuk-form-group{% if form.is_completion_date_known.errors %} govuk-form-group--error{% endif %}">
             <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                     <h2 class="govuk-fieldset__heading ">
                         {{ form.is_completion_date_known.label }}
                     </h2>
                 </legend>
+                {% if form.is_completion_date_known.errors %}
+                    {% for error in form.is_completion_date_known.errors %}
+                        <span class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> {{ error }}
+                    </span>
+                    {% endfor %}
+                {% endif %}
                 <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                     {% for radio in form.is_completion_date_known %}
                         {{ radio.tag }}
