Address Django models.W042 warning

--- a/defend_data_capture/supply_chains/templates/strategic_action_summary.html
+++ b/defend_data_capture/supply_chains/templates/strategic_action_summary.html
@@ -18,7 +18,7 @@
 <h1 class="govuk-heading-xl">Strategic actions for
   <br>
   {{ supply_chain.name }}</h1>
-<p class="govuk-body">Select a strategic action to view and edit its details.</p>
+<p class="govuk-body">Select a strategic action to view its details.</p>
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-with-summary-sections">
   {% for action in strategic_actions %}
   <div class="govuk-accordion__section">
