A bunch of fixes for things revealed by the Cypress tests, along with the Cypress tests that revealed them.

--- a/defend_data_capture/supply_chains/templates/supply_chains/includes/gds-error-summary-item.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/includes/gds-error-summary-item.html
@@ -1,5 +1,5 @@
 {% for field in form %}
-    {% if field.errors %}
+    {% if field.errors and field.name == field_name %}
         {% for error in field.errors %}
             <li>
                 <a href="{{ url_for_errors }}#{{ field.id_for_label }}">{{ error }}</a>
