--- a/defend_data_capture/supply_chains/templates/supply_chains/includes/gds-detail-error-summary-item.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/includes/gds-detail-error-summary-item.html
@@ -1,11 +1,13 @@
 {% for field in form %}
     {% with form.prefix|add:"-"|add:field.name as prefixed_field_name %}
-        {% if field.errors and prefixed_field_name == field_name %}
-            {% for error in field.errors %}
-                <li>
-                    <a href="{{ url_for_errors }}#{{ field.id_for_label }}">{{ error }}</a>
-                </li>
-            {% endfor %}
+        {% if field.errors %}
+            {% if field.name == field_name or prefixed_field_name == field_name %}
+                {% for error in field.errors %}
+                    <li>
+                        <a href="{{ url_for_errors }}#{{ field.id_for_label }}">{{ error }}</a>
+                    </li>
+                {% endfor %}
+            {% endif %}
         {% endif %}
     {% endwith %}
 {% endfor %}
