--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-revised-timing-form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly-update-revised-timing-form.html
@@ -27,7 +27,7 @@
         </div>
         <div class="govuk-form-group{% if form.errors %} govuk-form-group--error{% endif %}">
             <h2 class="govuk-label-wrapper govuk-heading-m">
-                <label class="govuk-label govuk-label--m" for="{{ form.content.id_for_label }}">
+                <label class="govuk-label govuk-label--m" for="{{ form.reason_for_completion_date_change.id_for_label }}">
                     {{ form.reason_for_completion_date_change.label }}
                 </label>
             </h2>
