--- a/defend_data_capture/supply_chains/templates/supply_chains/includes/monthly_update_form_breadcrumbs.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/includes/monthly_update_form_breadcrumbs.html
@@ -3,8 +3,7 @@
         {% for _, link_data in navigation_links.items %}
             <li class="moj-sub-navigation__item">
                 <a class="moj-sub-navigation__link"{% if link_data.is_current_page %} aria-current="page"{% endif %} href="{{ link_data.url }}">
-                    {{ forloop.counter }}.
-                    {{ link_data.label }}
+                    {{ forloop.counter }}. {{ link_data.label }}
                 </a>
             </li>
         {% endfor %}
