--- a/defend_data_capture/supply_chains/templates/base.html
+++ b/defend_data_capture/supply_chains/templates/base.html
@@ -41,7 +41,7 @@
                         Resilience tool
                     </a>
                     <span class="app-header-span">
-                        <p class="app-header-item">{{ request.user.first_name }} {{ request.user.last_name }} - {{ request.user.gov_department.name }}</p>
+                        <p class="app-header-item">{{ request.user }} - {{ request.user.gov_department.name }}</p>
                     </span>
                 </div>
             </div>
