--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_info_form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_info_form.html
@@ -17,9 +17,9 @@
                 Latest monthly update
                 </label>
             </h2>
-            <div class="govuk-hint">
+            <div class="govuk-body">
                 <p>Include details of:</p>
-                <ul class="govuk-list govuk-list--bullet govuk-hint">
+                <ul class="govuk-list govuk-list--bullet govuk-body">
                     <li>activities undertaken</li>
                     <li>milestones reached</li>
                     <li>any other strategic action developments.</li>
