--- a/defend_data_capture/assets/stylesheets/application.scss
+++ b/defend_data_capture/assets/stylesheets/application.scss
@@ -40,3 +40,17 @@ $govuk-image-url-function: frontend-image-url;
   @include govuk-responsive-margin(6, 'bottom');
   background-color: govuk-colour("light-grey", $legacy: "grey-4");
 }
+
+.moj-sub-navigation__link[aria-current="page"]:link,
+.moj-sub-navigation__link[aria-current="page"]:visited {
+  color: $govuk-text-colour;
+  font-weight: bold;
+}
+
+.moj-sub-navigation__link[aria-current="page"]:before {
+  background-color: $govuk-text-colour;
+}
+
+.moj-sub-navigation__link:link, .moj-sub-navigation__link:visited {
+  color: $govuk-secondary-text-colour;
+}
