Ensure permissions are checked when user attempts to access forms.
There's also a load of ancillary changes in here, like URL slug names and stuff.

--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -110,7 +110,7 @@
     {% endif %}
 
     {% if not view.update_submitted %}
-        <form action={% url 'tlist' sc_slug=view.supply_chain.slug %} method="post">
+        <form action={% url 'tlist' supply_chain_slug=view.supply_chain.slug %} method="post">
             {% csrf_token %}
             <button class="govuk-button" data-module="govuk-button" type="submit">
                 Submit monthly update
