--- a/defend_data_capture/assets/stylesheets/application.scss
+++ b/defend_data_capture/assets/stylesheets/application.scss
@@ -1,12 +1,8 @@
-@function frontend-font-url($filename) {
-  @return url("~govuk-frontend/govuk/assets/fonts/" + $filename);
-}
-
 @function frontend-image-url($filename) {
   @return url("~govuk-frontend/govuk/assets/images/" + $filename);
 }
 
-$govuk-font-url-function: frontend-font-url;
+$govuk-font-family: "Arial";
 $govuk-image-url-function: frontend-image-url;
 
 @import "~govuk-frontend/govuk/all";
