Tidy up URL names: all kebab-case, all very specific.

--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_summary.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_summary.html
@@ -124,7 +124,7 @@
                 Submit
             </button>
 
-            <a href="{% url 'tlist' supply_chain_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
+            <a href="{% url 'supply-chain-task-list' supply_chain_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
                 Cancel
             </a>
         </div>
