--- a/defend_data_capture/supply_chains/templates/task_complete.html
+++ b/defend_data_capture/supply_chains/templates/task_complete.html
@@ -7,10 +7,10 @@
             <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="{% url 'tlist' view.supply_chain.slug %}">{{ view.supply_chain.name }}</a>
+            <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' view.supply_chain.slug %}">{{ view.supply_chain.name }}</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="{% url 'update_complete' view.supply_chain.slug %}" aria-current="page">Update complete</a>
+            <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-update-complete' view.supply_chain.slug %}" aria-current="page">Update complete</a>
         </li>
     </ol>
 </nav>
