--- a/defend_data_capture/supply_chains/templates/strategic_action_summary.html
+++ b/defend_data_capture/supply_chains/templates/strategic_action_summary.html
@@ -6,10 +6,10 @@
       <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="{% url 'tlist' supply_chain.slug %}">{{ supply_chain.name }}</a>
+      <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' supply_chain.slug %}">{{ supply_chain.name }}</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="{% url 'strat_action_summary' supply_chain.slug %}" aria-current="page">Strategic actions for {{ supply_chain.name }}</a>
+      <a class="govuk-breadcrumbs__link" href="{% url 'strategic-action-summary' supply_chain.slug %}" aria-current="page">Strategic actions for {{ supply_chain.name }}</a>
     </li>
   </ol>
 </nav>
@@ -112,5 +112,5 @@
 {% if strategic_actions.has_other_pages %}
     {% include 'includes/pagination.html' with objects=strategic_actions objects_name="strategic actions" %}
 {% endif %}
-<a class="govuk-button govuk-button--secondary" data-module="govuk-button" href="{% url 'tlist' supply_chain.slug %}">Back to task list</a>
+<a class="govuk-button govuk-button--secondary" data-module="govuk-button" href="{% url 'supply-chain-task-list' supply_chain.slug %}">Back to task list</a>
 {% endblock %}
