--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_revised_timing_form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_revised_timing_form.html
@@ -45,7 +45,7 @@
                 Save and continue
             </button>
 
-            <a href="{% url 'tlist' supply_chain_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
+            <a href="{% url 'supply-chain-task-list' supply_chain_slug=strategic_action_update.supply_chain.slug %}" class="govuk-button govuk-button--secondary" data-module="govuk-button" type="button">
                 Cancel
             </a>
         </div>
