--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -7,7 +7,7 @@
         <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="{% url 'tlist' view.supply_chain.slug %}" aria-current="page">{{ view.supply_chain.name }}</a>
+        <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' view.supply_chain.slug %}" aria-current="page">{{ view.supply_chain.name }}</a>
       </li>
     </ol>
 </nav>
@@ -110,7 +110,7 @@
     {% endif %}
 
     {% if not view.update_submitted %}
-        <form action={% url 'tlist' supply_chain_slug=view.supply_chain.slug %} method="post">
+        <form action={% url 'supply-chain-task-list' supply_chain_slug=view.supply_chain.slug %} method="post">
             {% csrf_token %}
             <button class="govuk-button" data-module="govuk-button" type="submit">
                 Submit monthly update
@@ -130,7 +130,7 @@
         This includes: Description of the action, impact, strategic action framework category and depedencies
     </p>
     <p class="govuk-body">
-        <a href={% url 'strat_action_summary' view.supply_chain.slug %} class="govuk-link">View strategic action summary</a>
+        <a href={% url 'strategic-action-summary' view.supply_chain.slug %} class="govuk-link">View strategic action summary</a>
     </p>
 
     <h2 class="govuk-heading-l">Supply chain summary</h2>
@@ -141,7 +141,7 @@
         This includes: Key information, vulnerability assessment, scenario assessment, maturity self assessment, risk monitoring and archived strategic actions
     </p>
     <p class="govuk-body">
-        <a href={% url 'sc_summary' view.supply_chain.slug %} class="govuk-link">View supply chain summary</a>
+        <a href={% url 'supply-chain-summary' view.supply_chain.slug %} class="govuk-link">View supply chain summary</a>
     </p>
 
     <br>
