--- a/defend_data_capture/supply_chains/templates/task_list.html
+++ b/defend_data_capture/supply_chains/templates/task_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Update {{ view.supply_chain.name }} – {{ block.super }}{% endblock %}
+
 {% block breadcrumbs %}
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
