--- a/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_revised_timing_form.html
+++ b/defend_data_capture/supply_chains/templates/supply_chains/monthly_update_revised_timing_form.html
@@ -1,5 +1,7 @@
 {% extends 'supply_chains/monthly_update_form_base.html' %}
 
+{% block page_title %}Revised expected completion date - {{ block.super }}{% endblock page_title %}
+
 {% block form %}
     {% include 'supply_chains/includes/existing_completion_date.html' %}
     <form method="post" action="">
