Made date formats consistent

--- a/defend_data_capture/supply_chains/templates/sau_review.html
+++ b/defend_data_capture/supply_chains/templates/sau_review.html
@@ -24,7 +24,7 @@
   <div>
     <span>
       <strong>Update submitted on<br></strong>
-      {{ update.submission_date|date:"d.m.Y" }}
+      {{ update.submission_date|date:"j F Y" }}
     </span>
   </div>
 
