Display action name in header on monthly update pages

--- a/update_supply_chain_information/supply_chains/templates/supply_chains/monthly_update_form_base.html
+++ b/update_supply_chain_information/supply_chains/templates/supply_chains/monthly_update_form_base.html
@@ -8,6 +8,6 @@
 
 {% block body %}
     {% include "supply_chains/includes/error_summary.html" %}
-    <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
+    <h1 class="govuk-heading-xl">Monthly update for {{ strategic_action_update.strategic_action.name }}</h1>
     {% block form %}{% endblock form %}
 {% endblock body %}
