--- a/update_supply_chain_information/supply_chains/templates/supply_chains/monthly_update_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/supply_chains/monthly_update_summary.html
@@ -8,7 +8,7 @@
 
 {% block body %}
     {% include "supply_chains/includes/summary_page_error_summary.html" %}
-    <h1 class="govuk-heading-xl">Strategic action monthly update</h1>
+    <h1 class="govuk-heading-xl">Monthly update for {{ strategic_action_update.strategic_action.name }}</h1>
     <h2 class="govuk-heading-m">Check your answers</h2>
     <p class="govuk-body">Check all the information you've provided is correct before confirming.</p>
     {# Always include the content form #}
