--- a/update_supply_chain_information/supply_chains/templates/sau_review.html
+++ b/update_supply_chain_information/supply_chains/templates/sau_review.html
@@ -18,6 +18,8 @@
   </nav>
 {% endblock %}
 
+{% block page_header %} {% endblock %}
+
 {% block body %}
   <h1 class="govuk-heading-xl">Current monthly update for {{ strategic_action.name }}</h1>
 
