--- a/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
@@ -17,6 +17,9 @@
   </ol>
 </nav>
 {% endblock %}
+
+{% block page_header %} {% endblock %}
+
 {% block body %}
 <h1 class="govuk-heading-xl">Strategic actions for
   <br>
