--- a/update_supply_chain_information/supply_chains/templates/task_complete.html
+++ b/update_supply_chain_information/supply_chains/templates/task_complete.html
@@ -18,6 +18,8 @@
 </nav>
 {% endblock %}
 
+{% block page_header %} {% endblock %}
+
 {% block body %}
     <div class="govuk-panel govuk-panel--confirmation">
         <h1 class="govuk-panel__title">
