--- a/update_supply_chain_information/supply_chains/templates/task_list.html
+++ b/update_supply_chain_information/supply_chains/templates/task_list.html
@@ -15,6 +15,8 @@
 </nav>
 {% endblock %}
 
+{% block page_header %} {% endblock %}
+
 {% block body %}
 
     <h1 class="govuk-heading-xl"> Update {{ view.supply_chain.name }} </h1>
