Fix typo in programme board

--- a/update_supply_chain_information/supply_chains/templates/task_complete.html
+++ b/update_supply_chain_information/supply_chains/templates/task_complete.html
@@ -38,7 +38,7 @@
     </p>
 
     <p class="govuk-body">
-        Your update has been sent to the Global Supply Chains team who will use this data to inform Programme Broad decision making.
+        Your update has been sent to the Global Supply Chains team who will use this data to inform Programme Board decision making.
     </p>
 
     <p class="govuk-body">
