Add template tag to return feedback emails

--- a/update_supply_chain_information/supply_chains/templates/base.html
+++ b/update_supply_chain_information/supply_chains/templates/base.html
@@ -2,6 +2,7 @@
 {% load render_bundle from webpack_loader %}
 {% load webpack_static from webpack_loader %}
 {% load supply_chain_filters %}
+{% load supply_chain_tags %}
 <html lang="en" class="govuk-template ">
 
 <head>
