Set mailto link for feedback

--- a/update_supply_chain_information/supply_chains/templates/base.html
+++ b/update_supply_chain_information/supply_chains/templates/base.html
@@ -53,8 +53,9 @@
                     <strong class="govuk-tag govuk-phase-banner__content__tag">
                         beta
                     </strong>
+                    {% get_feedback_emails_as_string as feedback_emails %}
                     <span class="govuk-phase-banner__text">
-                        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+                        This is a new service – your <a class="govuk-link" href="mailto:{{ feedback_emails }}">feedback</a> will help us to improve it.
                     </span>
                 </span>
             </p>
