--- a/update_supply_chain_information/supply_chains/templates/supply_chains/includes/monthly_update_form_breadcrumbs.html
+++ b/update_supply_chain_information/supply_chains/templates/supply_chains/includes/monthly_update_form_breadcrumbs.html
@@ -2,9 +2,15 @@
     <ol class="moj-sub-navigation__list">
         {% for _, link_data in navigation_links.items %}
             <li class="moj-sub-navigation__item">
-                <a class="moj-sub-navigation__link"{% if link_data.is_current_page %} aria-current="page"{% endif %} href="{{ link_data.url }}">
-                    {{ forloop.counter }}. {{ link_data.label }}
-                </a>
+                {% if link_data.not_a_link %}
+                    <span class="moj-sub-navigation__link"{% if link_data.is_current_page %} aria-current="page"{% endif %}>
+                        {{ forloop.counter }}. {{ link_data.label }}
+                    </span>
+                {% else %}
+                    <a class="moj-sub-navigation__link"{% if link_data.is_current_page %} aria-current="page"{% endif %} href="{{ link_data.url }}">
+                        {{ forloop.counter }}. {{ link_data.label }}
+                    </a>
+                {% endif %}
             </li>
         {% endfor %}
     </ol>
